gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: url-shortener-gateway
  namespace: url-shortener

spec:
  gatewayClassName: envoy-gateway-class

  listeners:

  # HTTP listener (redirect later)
  - name: http
    protocol: HTTP
    port: 80

    allowedRoutes:
      namespaces:
        from: Same


  # HTTPS listener
  - name: https
    protocol: HTTPS
    port: 443

    tls:
      mode: Terminate
      certificateRefs:
      - name: url-shortener-tls

    allowedRoutes:
      namespaces:
        from: Same
