httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: url-shortener-route
  namespace: url-shortener

spec:

  parentRefs:
  - name: url-shortener-gateway

  hostnames:
  - dharshan.kubeace.in

  rules:

  - matches:
    - path:
        type: PathPrefix
        value: /

    backendRefs:
    - name: url-shortener
      port: 80
